<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_schedule50"
        android:title="@string/schedule" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_control100"
        android:title="@string/history" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile50"
        android:title="@string/profile" />
</menu>