...
    <string name="sum">Сумма: </string>
    <string name="comment">Комментарий: </string>
    <string name="done">Выполнен: </string>

    <string name="select_performance">Выберите номер</string>
    <string name="manager_profile_title">Профиль менеджера</string>
    <string name="Paid">Выплатить</string>
    <string name="unpaidArtists">Артисты с невыплаченными зарплатами</string>
    <string name="artistsAll">Артисты коллектива</string>
    <string name="performancesAll">Репертуар коллектива</string>
    <string name="performancesRates">Номера и ставки:</string>

    <string name="dateInp">Дата</string>
...
