<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Дата -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="62dp"

            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/dateInp"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Номер -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPerformance"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">

            <Spinner
                android:id="@+id/spinnerPerformance"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:prompt="@string/select_performance" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Место -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLocation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeInp"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Сумма -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sumInp"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Комментарий -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilComment"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/commentInp"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Выбор артистов -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectartists"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:id="@+id/artistsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </LinearLayout>
</ScrollView>